--- a/SoundManagerTestProj.uproject
+++ b/SoundManagerTestProj.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "SoundManagerTestProj",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"UMG",
+				"Engine"
+			]
 		}
 	]
 }
